--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "swagger-ui-express": "^5.0.0",
     "swagger-jsdoc": "^6.2.8",
     "redis": "^4.6.12",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -47,6 +48,7 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/nodemailer": "^6.4.14",
+    "@types/axios": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
