--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "swagger-jsdoc": "^6.2.8",
     "redis": "^4.6.12",
     "nodemailer": "^6.9.7",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -49,6 +50,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/nodemailer": "^6.4.14",
     "@types/axios": "^0.14.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
