Update environment configuration with all service settings

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,27 @@
+# Server Configuration
 PORT=3000
 NODE_ENV=development
 API_VERSION=v1
+
+# Database
+MONGODB_URI=mongodb://localhost:27017/shopswift
+
+# Redis
+REDIS_URL=redis://localhost:6379
+
+# JWT
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_EXPIRES_IN=7d
+
+# Email (SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM=noreply@shopswift.com
+
+# Webhooks
+WEBHOOK_URL=https://your-webhook-url.com/webhook
+
+# CORS
+CORS_ORIGIN=*
