--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "test": "jest"
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "e-commerce",
@@ -56,6 +60,7 @@
     "eslint": "^8.56.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
+    "prettier": "^3.1.1",
     "jest": "^29.7.0",
     "@types/jest": "^29.5.11",
     "ts-jest": "^29.1.1",
